--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "reimu-fortune",
   "version": "1.0.0",
-  "type": "module",
   "scripts": {
-    "start": "parcel index.html",
-    "build": "parcel build ./index.html",
-    "vercel-build": "parcel build ./index.html"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@google/genai": "^1.0.0",
@@ -13,15 +12,13 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "parcel": "^2.13.3",
+    "vite": "^5.4.0",
+    "@vitejs/plugin-react": "^4.3.0",
+    "typescript": "^5.3.0",
     "process": "^0.11.10",
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
     "@vercel/node": "^3.0.0"
-  }
-  ,
-  "engines": {
-    "node": "24.x"
   }
 }
