--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.0.0",
+    "html-to-image": "^1.11.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
